fix: branding spacing on mobile

--- a/assets/css/branding.pcss
+++ b/assets/css/branding.pcss
@@ -39,4 +39,10 @@
     color: var(--skeleton-color-fg-base);
     font-weight: 400;
   }
+  
+  @media (max-width: 776px) {
+    & {
+      padding: 1rem 0.75rem;
+    }
+  }
 }
